# isaaclab-franka-manipulation

./: .gitignore  README.md  install_denver_isaac.sh  isaaclab_exact_requirements.txt  open_rsl_rl_good.pt  play_rsl_rl.py  pyproject.toml  rsl_rl_ppo_cfg.py  train_rsl_rl.py
configs/: README.md
docs/: README.md
franka_rl_manipulation/: __init__.py
franka_rl_manipulation/envs/: __init__.py  franka_cabinet_place_env.py
franka_rl_manipulation/training/: __init__.py  rsl_rl_ppo_cfg.py
scripts/: play_rsl_rl.py  train_rsl_rl.py
