[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "franka-rl-manipulation"
version = "0.1.0"
description = "Long-horizon Franka RL manipulation tasks for Isaac Lab"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Mohammad"}]

[tool.setuptools]
packages = ["franka_rl_manipulation", "franka_rl_manipulation.envs", "franka_rl_manipulation.training"]
